change some colors

--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -19,11 +19,16 @@ $fontFamily: "Formular";
 
 
 // Цвета
-$primalcolor: #3d3b3b; // Основной цвет
+$primalcolor: #000; // 3d3b3b
 $secondcolor: #414141;
-$light: #fee100;
+$light: #fdd501; //fee100
 $black: #000;
 $white: #fff;
+// New option
+$green: #38b08a;
+$pirple: #493774;
+$yellow: #fdd501;
+// /New option
 //* </ПЕРЕМЕННЫЕ>==================================================================================================================
 
 
