--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -2,6 +2,13 @@
 	z-index: 50;
 	position: relative;
 }
+@media (min-width: 1200px) {
+	.header {
+		position: fixed;
+		height: 100%;
+		width: 50px;
+	}
+}
 
 .header::before {
 	content: "";
@@ -11,6 +18,11 @@
 	width: 100%;
 	height: 100%;
 	background-color: #fee100;
+}
+@media (min-width:1200px) {
+	.header::before {
+		z-index: 50;
+	}
 }
 
 .header__body {
@@ -33,6 +45,13 @@
 .header__burger.active {
 	left: 240px;
 	transition: all 0.35s ease 0.05s;
+}
+@media (min-width:1200px) {
+	.header__burger.active {
+		display: block;
+		left: 0;
+		transition: all 0.5s ease 0s;
+	}
 }
 
 .header__burger.active::before {
@@ -94,6 +113,11 @@
 .header__menu.active {
 	left: 0;
 	transition: all 0.35s ease 0s;
+}
+@media (min-width:1200px) {
+	.header__menu.active {
+		left: 50px;
+	}
 }
 
 .header__menu-close {
