--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -16,10 +16,11 @@
 	opacity: 1;
 	visibility: visible;
 }
+
 .modal__dialog {
 	min-height: 100%;
 	width: 100%;
-	display: grid; 
+	display: flex; 
 	justify-content: center;
 	align-items: center;
 	padding: 50px 10px;
@@ -86,8 +87,8 @@
 	bottom: 13.5px;
 	transform: rotate(-45deg);
 }
-
-
+.close-modal {
+}
 .modal__content {
 	background-color: #fff;
 	color: $black;
@@ -108,237 +109,135 @@
 	opacity: 1;
 	transform: perspective(600px) translate(0px, 0px) rotateX(0deg);
 }
-.modal__header {
+.form__body {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	font-size: 14px;
-	padding: 20px 15px 40px;
+	flex-direction: column;
+}
+.modal__header {
+	padding: 0 20px;
 }
 @media (min-width:1000px) {
 	.modal__header {
-		padding: 20px 30px 40px;
+		padding: 0 45px;
 	}
 }
-/* .modal__header::after {
-	content: '';
-	display: block;
-	position: absolute;
-	top: 100px;
-	left: 0;
+.modal__titles {
 	width: 100%;
-	border-bottom: 5px solid black;
-} */
-.modal__title {
+	display: flex;
+	align-items: center;
 	font-size: 14px;
-	margin-right: 20px;
+	padding: 0 0 20px;
+	
 }
-@media (min-width:1000px) {
-	.modal__title {
-		margin-right: 70px;
-	}
+.modal__title {
+	flex: 0 0 85%;
+	margin-right: 5px;
 }
 .modal__steps {
 	font-weight: 500;
-}
-
-.modal__progressbar {
-	height: 3px;
-	width: 100%;
-	background-color: silver;
-}
-.modal__progressbar-progress {
-	width: 0;
-	height: 100%;
-	background-color: $black;
-	transition: all 0.8s ease 0s;
-}
-// ---------------------all body---------------------
-
-.modal__body.active {
-	display: block;
-}
-.modal__body {
-	display: none;
-}
-
-// ---------------------/all body---------------------
-
-
-// ---------------------body_1---------------------
-.modal__body_1 {
-	padding: 15px;
-}
-@media (min-width:1000px) {
-	.modal___body_1 {
-		padding: 0 30px;
-	}
-}
-.modal__body_1 h3 {
-	font-size: 26px;
-	margin-bottom: 35px;
-}
-.modal__wrapper {
-	display: flex;
-	flex-wrap: wrap;
-	/* justify-content: space-around; */
+	flex: 0 0 15%;
 	text-align: center;
 }
-.modal__card {
-	flex: 0 1 50%;
-	padding: 10px;
-	max-width: 210px;
-	position: relative;
+.modal__step {
 }
-.popup {
+.modal__lasts-text {
+	font-size: 20px;
+	padding: 0 0 20px;
+	line-height: 1.4;
+	display: none;
 }
-.popup__object {
-	appearance: none;
-	width: 0;
-	height: 0;
-	position: absolute;
+@media(min-width:1000px) {
+	.modal__lasts-text {
+	font-size: 24px;
+	line-height: 1.5;
+	}
 }
-input.popup__object:checked {
-	background-color: $pirple;
-	width: 25px;
-	height: 25px;
-	border-radius: 50%;
-	position: absolute;
-	top: 0px;
-	left: 0px;
+.modal__last-text {
 }
-.popup__img {
-	max-width: 100%;
-}
-.popup__img img {
+.modal__progressbar {
+	height: 5px;
 	width: 100%;
+}
+.modal__progressbar-progress {
+	width: 100%;
+	height: 100%;
+	background-color: $secondcolor;
+}
+.form__items {
+	padding: 0 20px;
+}
+@media (min-width:1000px) {
+	.form__items {
+		padding: 0 45px;
+	}
+}
+.form__item {
+}
+.form__label {
+}
+.form__label-title {
+	font-size: 22px;
+	line-height: 1.5;
+	font-weight: 400;
+	padding: 15px 0;
+}
+@media (min-width:1000px) {
+	.form__label-title {
+		font-size: 26px;		
+	}
+}
+.options {
+	max-width: 100%;
+	display: grid;
+	grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+	gap: 10px;
+}	
+.options__item {
+	width: 100%;
+	text-align: center;
+}
+.options__label {
+	width: 100%;
+}
+.options__label img {
+	max-width: 100%;
 	object-fit: cover;
 	object-position: center;
 }
-.popup__text {
-	margin-top: 15px;
-	font-size: 15px;
-	line-height: 1.1;
+.options__text {
+	text-align: left;
 }
-// ---------------------/body_1---------------------
-
-// ---------------------body_2---------------------
-
-.modal__body_2 {
-	padding: 0 15px;
-	min-height: 200px;
-	
+.ranges {
 }
-@media (min-width:1000px) {
-	.modal__body_2 {
-		padding: 0 30px;
-	}
+.ranges__meanings {
 }
-.modal__range {
+.ranges__min {
 }
-.modal__body-title {
-	font-size: 20px;
-	line-height: 1.5;
-	font-weight: 400;
-	margin: 20px 0 20px;
+.ranges__max {
 }
-@media (min-width:1000px) {
-	.modal__body-title {
-		padding: 35px 0 20px;
-		font-size: 26px;
-	}
+.informations {
 }
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;
-   margin: 0;
+.informations__tel {
 }
-.scrollbar {
+.informations__label {
 }
-.scrollbar__value {
-	margin: 15px 0;
-	box-shadow: 0 1px 8px 0 rgb(0 0 0 / 20%);
-	text-align: center;
-	min-width: 75px;
-	font-size: 14px;
-	position: relative;
-	padding: 3px;
-	align-self: flex-start;
+.form__input {
 }
-.scrollbar__box {
-	margin-top: 5px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 95%;
-	margin: 5px auto 0;
+.informations__name {
 }
-.scrollbar__slider {
-	width: 100%;
-	height: 2px;
-	background-color: $light;
-	appearance: none;
+.informations__email {
 }
-.scrollbar__box input[type=range]::-webkit-slider-thumb {
-	appearance: none;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background-color: $light;
-	position: relative;
-}
-.scrollbar__meanings {
-	margin-top: 20px;
-	display: flex;
-	justify-content: space-between;
-}
-.scrollmar__min {
-}
-.scrollbar__max {
-}
-
-// ---------------------/body_2---------------------
-
-// ---------------------body_3---------------------
-
-.modal__body_3 {
-	padding: 0 15px;
-	min-height: 200px;
-}
-@media (min-width:1000px) {
-	.modal__body_3 {
-		padding: 0 30px;
-	}
-}
-
-// ---------------------/body_3---------------------
 .modal__footer {
-	margin-top: 40px;
-	display: flex;
-	justify-content: space-between;
-	padding: 15px;
+	padding: 0 20px;
 }
 @media (min-width:1000px) {
-	.modal__footer {
-		padding: 0 30px;
+	.modal__footer  {
+		padding: 0 45px;
 	}
 }
-.modal__prev, .modal__next {
-	min-width: 100px;
-	padding: 15px 60px;
-	font-size: 14px;
-	font-weight: 700;
-	color: $white;
-}
-.modal__prev {
-	background-color: $secondcolor;
+.modal__back {
 }
 .modal__next {
-	background-color: $light;
 }
-
-
-
-
+.form__button {
+}
