--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -134,9 +134,41 @@
 	object-fit: cover;
 	object-position: center;
 }
+.header__list {
+	
+}
+.header__item {
+/* 	padding: 10px 0; */
+	position: relative;
+}
+.header__link {
+	cursor: pointer;
+	padding: 10px 0 8px;
+}
+
+.header__second-list {
+	display: flex;
+	flex-direction: column;
+	padding-left: 15px;
+	max-height: 0px;
+	overflow: hidden;
+	transition: all 0.8s ease 0s;
+}
+.header__link.active + .header__second-list {
+	max-height: 250px;
+	transition: all 1.2s ease 0s;
+}
+.header__second-link {
+	font-size: 16px;
+	padding: 5px 0;
+	color: $secondcolor;
+	font-weight: 500;
+	opacity: .8;
+	line-height: 1.35;
+}
 
 .header__list li {
-	padding: 10px 0;
+	
 }
 
 .header__link {
@@ -145,8 +177,4 @@
 	text-transform: uppercase;
 	font-weight: 500;
 	opacity: 0.8;
-}
-
-body.lock {
-	overflow: hidden;
 }
