--- a/src/scss/safety.scss
+++ b/src/scss/safety.scss
@@ -34,6 +34,7 @@ body._lock {
 
 //* </ОСНОВНАЯ СЕТКА>=====================================================================================================================
 @import "layout/header";
-@import "layout/main";
+@import "pages/safety";
 @import "layout/footer";
 @import "components/popup";
+
