--- a/src/scss/delivery.scss
+++ b/src/scss/delivery.scss
@@ -34,7 +34,7 @@ body._lock {
 
 //* </ОСНОВНАЯ СЕТКА>=====================================================================================================================
 @import "layout/header";
-@import "pages/company.scss";
+@import "pages/delivery";
 @import "layout/footer";
 @import "components/calculation";
 
