--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,4 +36,4 @@ body._lock {
 @import "layout/header";
 @import "layout/main";
 @import "layout/footer";
-@import "components/popup";
+@import "components/calculation";
