--- a/src/scss/components/calculation.scss
+++ b/src/scss/components/calculation.scss
@@ -1,4 +1,4 @@
-.modal {
+	.modal {
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -32,9 +32,10 @@
 	height: 50px;
 	background-color: $black;
 	top: 0;
-	z-index: 13;
-	transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
-	transition: all 0.8s ease 0.4s;
+	left: 0;
+	z-index: 23;
+	/* transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+	transition: all 0.8s ease 0.4s; */
 }
 @media (min-width:1000px) {
 	.modal__head {
@@ -173,6 +174,9 @@
 }
 .form__item {
 }
+.form__item.active {
+
+}
 .form__label {
 }
 .form__label-title {
@@ -189,24 +193,76 @@
 .options {
 	max-width: 100%;
 	display: grid;
-	grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+	grid-template: repeat(4, 1fr)/ 1fr;
 	gap: 10px;
-}	
+}
+@media (min-width:425px) {
+	.options {
+		grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+	}
+}
+@media (min-width:592px) {
+	.options {
+		grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+	}
+}
+@media (min-width:742px) {
+	.options {
+		grid-template: 1fr / repeat(4, 1fr);
+	}
+}
 .options__item {
 	width: 100%;
-	text-align: center;
+	position: relative;
+	height: 200px;
+}
+@media (min-width:425px) {
+	.options__item {
+		height: auto;
+	}
 }
 .options__label {
 	width: 100%;
+	position: relative;
 }
+/* .options__label::after {
+	content: '';
+	position: absolute;
+	top: -5px;
+	left: -5px;
+	background-color: $light;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+} */
 .options__label img {
-	max-width: 100%;
+	height: 70%;
+	width: 100%;
 	object-fit: cover;
 	object-position: center;
+	position: relative;
 }
 .options__text {
 	text-align: left;
+	font-size: 15px;
+	margin: 10px 0;
+	word-wrap: break-word;
 }
+.options__input {
+	appearance: none;
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+.options__input:checked {
+	top: -10px;
+	left: -10px;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: $light;
+}
+
 .ranges {
 }
 .ranges__meanings {
