--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,5 +1,5 @@
 .header {
-	z-index: 50;
+	z-index: 12;
 	position: relative;
 }
 @media (min-width: 1200px) {
@@ -21,7 +21,7 @@
 }
 @media (min-width:1200px) {
 	.header::before {
-		z-index: 50;
+		z-index: 12;
 	}
 }
 
@@ -144,6 +144,18 @@
 .header__link {
 	cursor: pointer;
 	padding: 10px 0 8px;
+	transition: all 0.8s ease 0s;
+}
+.header__link:hover {
+	color: $light;
+	text-decoration: underline;
+}
+.header__link.active {
+	opacity: 0.3;
+}
+.header__link.active:hover {
+	color:inherit;
+	text-decoration: none;
 }
 
 .header__second-list {
@@ -165,6 +177,10 @@
 	font-weight: 500;
 	opacity: .8;
 	line-height: 1.35;
+	display: block;
+}
+.header__second-link:hover {
+	color: $light;
 }
 
 .header__list li {
