--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -286,45 +286,7 @@ a.btn_2 {
 
 // ---------------------/carousel---------------------
 
-// ---------------------calculation---------------------
 
-.calculation {
-	padding: 75px 0 75px;
-	min-height: 100vh;
-}
-
-.calculation .title {
-	margin-bottom: 60px;
-}
-
-.calculation .calculation__content {
-	align-items: center;
-}
-
-.calculation .calculation__text {
-	font-size: 20px;
-	margin-bottom: 60px;
-}
-@media (min-width:1000px) {
-	.calculation a.btn_2 {
-		width: auto;
-	}
-}
-
-.calculation img {
-	width: 100%;
-	object-fit: cover;
-	object-position: center;
-	margin-top: 40px;
-}
-@media (min-width:768px) {
-	.calculation img {
-		margin-top: 0;
-	}
-}
-
-
-// ---------------------/calculation---------------------
 
 // ---------------------shelby---------------------
 
@@ -561,205 +523,4 @@ a.btn_2 {
 
 // ---------------------/news---------------------
 
-// ---------------------scheme---------------------
-
-.scheme {
-	padding: 75px 0 30px;
-	min-height: 100vh;
-	min-height: auto;
-}
-
-.scheme .title {
-	margin-bottom: 30px;
-}
-
-.steps {
-	display: flex;
-	flex-direction: column;
-}
-@media (min-width:992px) {
-	.steps {
-		flex-direction: row;
-	}
-}
-
-.step {
-	display: flex;
-	align-items: center;
-	padding-bottom: 40px;
-	position: relative;
-}
-@media (min-width:992px) {
-	.step {
-		flex-direction: column;
-		row-gap: 20px;
-		padding-right: 20px;
-	}
-	.step::after {
-		content: "";
-		width: 100%;
-		height: 100%;
-		top: 18px;
-		left: 0;
-		border-top: 2px solid $green;
-		position: absolute;
-	}
-	.step:last-child {
-		padding-right: 0;
-	}
-	.step:last-child:after {
-		display: none;
-	}
-
-}
-
-.step__number {
-	box-sizing: content-box;
-	background-color: $pirple;
-	border-radius: 50%;
-	overflow: hidden;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-width: 35px;
-	min-height: 35px;
-	align-self: flex-start;
-	z-index: 5;
-	color: $white;
-}
-
-.step__number::after {
-	content: "";
-	position: absolute;
-	width: 2px;
-	height: 100%;
-	background-color: $green;
-	z-index: 1;
-	top: 0;
-}
-@media (min-width:992px) {
-	.step__number::after {
-		display: none;
-	}
-}
-
-.step:last-child .step__number:after {
-	height: 0;
-}
-@media (min-width:992px) {
-	.step:last-child {
-		padding-right: 0;
-	}
-}
-
-.step__number span {
-	font-size: 25px;
-	font-weight: 700;
-	z-index: 3;
-}
-
-.step__content {
-	margin-left: 20px;
-}
-@media (min-width:992px) {
-	.step__content {
-		margin-left: 0px;
-	}
-}
-
-.scheme__title {
-	font-size: 20px;
-	font-weight: 400;
-	line-height: 1.35;
-	margin-bottom: 20px;
-}
-
-.scheme__text {
-	color: $black;
-	font-size: 15px;
-	line-height: 1.55;
-	font-weight: 300;
-}
-
-// ---------------------/scheme---------------------
-
-// ---------------------feedback---------------------
-
-.feedback {
-	padding: 75px 0 60px;
-	min-height: 100vh;
-	position: relative;
-	text-align: center;
-	color: $white;
-}
-
-.feedback::after {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-color: $black;
-	opacity: 0.8;
-}
-
-.feedback .container {
-	position: relative;
-	z-index: 2;
-}
-
-.feedback .title {
-	color: $white;
-}
-
-.feedback .title:last-child {
-	margin-bottom: 50px;
-}
-
-.feedback .col-md-8 {
-	margin: 0 auto;
-}
-
-.feedback .col-lg-6 {
-	margin: 0 auto;
-}
-
-.feedback__subtitle {
-	margin-bottom: 50px;
-	font-size: 18px;
-	line-height: 1.55;
-}
-
-.feedback .col-sm-10 {
-	margin: 0 auto;
-}
-
-.feedback__form {
-	margin-bottom: 50px;
-}
-
-.feedback__form input {
-	margin-bottom: 20px;
-	color: $black;
-	height: 56px;
-	padding: 0 30px;
-	width: 100%;
-	font-size: 16px;
-	font-weight: 300;
-}
-
-.feedback__form button {
-	width: 100%;
-	height: 56px;
-	background-color: $light;
-	padding: 0 20px;
-	font-weight: 700;
-	font-size: 18px;
-}
-
-.feedback__info {
-	font-size: 15px;
-}
-
-// ---------------------/feedback---------------------
+@import "repeat";
