--- a/src/scss/pages/mounting.scss
+++ b/src/scss/pages/mounting.scss
@@ -130,47 +130,96 @@ a.btn_2 {
 
 // ---------------------/breadcump__div---------------------
 
-// ---------------------text---------------------
+// ---------------------mounting---------------------
 
-.text {
+.mounting {
 	background-color: #f1f1f3;
-	color: $black;
+	padding: 0 0 30px;
 }
-@media (min-width:992px) {
-	.text {
-		padding: 30px 0 40px;
-	}
-}
-.container {
-}
-.row {
-}
-.col-12 {
-}
-.text__title {
-	margin-bottom: 30px;
-	font-size: 26px;
+
+.mounting__title {
+	font-size: 18px;
 	font-weight: 600;
 	text-transform: uppercase;
+	margin-bottom: 70px;
 }
-.text p {
+.mounting__subtitle {
 	font-size: 20px;
-	margin-bottom: 20px;
+	font-weight: 100;
+	padding-bottom: 30px;
 }
-.text p span {
-	font-weight: 500;
+.mounting__types {
+	padding: 30px 0;
+	max-width: 760px;
+	margin: 0 auto;
 }
-.text__list {
-	margin: 20px 0;
+.mounting__types-title {
+	text-align: center;
+	font-size: 26px;
+	line-height: 1.23;
+	font-weight: 600;
+	margin-bottom: 45px;
 }
-.text__list ul {
-	list-style-type: disc;
+@media (min-width:768px) {
+	.mounting__types-title {
+		margin-bottom: 60px;
+	}
 }
-.text__list ul li {
-	margin-bottom: 15px;
-	margin-left: 20px;
+.mounting__types-wrapper {
 }
-// ---------------------/text---------------------
+.mounting__item {
+	display: flex;
+	align-items: center;
+	margin-bottom: 40px;
+}
+.mounting__image {
+	
+}
+.mounting__text {
+	padding-left: 15px;
+}
+@media (min-width:768px) {
+	.mounting__text {
+		padding-left: 20px;
+	}
+}
+@media (min-width:992px) {
+	.mounting__text {
+		padding-left: 30px;
+	}
+}
+.mounting__text-title {
+	font-size: 16px;
+	line-height: 1.35;
+	font-weight: 600;
+	margin-bottom: 14px;
+}
+@media (min-width:768px) {
+	.mounting__text-title {
+		font-size: 18px;
+	}	
+}
+@media (min-width:992px) {
+	.mounting__text-title {
+		font-size: 20px;
+	}	
+}
+.mounting__text-text {
+	font-size: 14px;
+	line-height: 1.45;
+}
+@media (min-width:768px) {
+	.mounting__text-text {
+		font-size: 16px;
+	}	
+}
+@media (min-width:992px) {
+	.mounting__text-text {
+		font-size: 18px;
+	}	
+}
+
+// ---------------------/mounting---------------------
 
 
 @import "../layout/repeat";
