--- a/src/scss/safety.scss
+++ b/src/scss/safety.scss
@@ -36,5 +36,5 @@ body._lock {
 @import "layout/header";
 @import "pages/safety";
 @import "layout/footer";
-@import "components/popup";
+@import "components/calculation";
 
