add modal calculator

--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -24,6 +24,7 @@ $secondcolor: #414141;
 $light: #fdd501; //fee100
 $black: #000;
 $white: #fff;
+$orange: #fe6829;
 // New option
 $green: #38b08a;
 $pirple: #493774;
