--- a/src/scss/components/calculation.scss
+++ b/src/scss/components/calculation.scss
@@ -42,7 +42,7 @@
 		background-color: inherit;
 	}
 }
-#calculation .modal.open  .modal__head  {
+#calculation.modal.open  .modal__head  {
 	opacity: 1;
 	transform: perspective(600px) translate(0px, 0px) rotateX(0deg);
 }
@@ -72,7 +72,7 @@
 	height: 100%;
 	position: relative;
 }
-#calculation .modal__close span::before, .modal__close span::after {
+#calculation .modal__close span::before,#calculation .modal__close span::after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -106,7 +106,7 @@
 		padding: 30px 0;
 	}
 }
-#calculation .modal.open  .modal__content {
+#calculation.modal.open  .modal__content {
 	opacity: 1;
 	transform: perspective(600px) translate(0px, 0px) rotateX(0deg);
 }
