added buy popup

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -38,3 +38,4 @@ body._lock {
 @import "layout/footer";
 @import "components/calculation";
 @import "components/product_page";
+@import "components/shoppingСart"
