add bottom button

--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -37,3 +37,4 @@ body._lock {
 @import "pages/catalog";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/buttons.scss"
