--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -38,4 +38,5 @@ body._lock {
 @import "layout/footer";
 @import "components/calculation";
 @import "components/product_page";
-@import "components/shoppingСart"
+@import "components/shoppingСart";
+@import "components/buttons.scss";
