--- a/src/scss/company.scss
+++ b/src/scss/company.scss
@@ -37,4 +37,5 @@ body._lock {
 @import "pages/company.scss";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/buttons.scss";
 
