--- a/src/scss/delivery.scss
+++ b/src/scss/delivery.scss
@@ -37,4 +37,5 @@ body._lock {
 @import "pages/delivery";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/buttons.scss";
 
