--- a/src/scss/mounting.scss
+++ b/src/scss/mounting.scss
@@ -37,4 +37,5 @@ body._lock {
 @import "pages/mounting";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/buttons.scss";
 
