--- a/src/scss/components/calculation.scss
+++ b/src/scss/components/calculation.scss
@@ -88,7 +88,7 @@
 	bottom: 13.5px;
 	transform: rotate(-45deg);
 }
-.close-modal {
+#calculation .close-modal {
 }
 #calculation .modal__content {
 	background-color: #fff;
