--- a/src/scss/components/shoppingСart.scss
+++ b/src/scss/components/shoppingСart.scss
@@ -211,7 +211,7 @@ button.amountPlus img, button.amountMinus img, .cart__remove img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	
+	pointer-events: none;
 }
 
 .cart__remove {
