--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -213,3 +213,31 @@
 .call__form-agree {
 	font-size: 14px;
 }
+
+
+.cart {
+	width: 50px;
+	height: 50px;
+	position: fixed;
+	z-index: 22;
+	top: 50%;
+	right: 10px;
+	background-color: #000;
+	overflow: hidden;
+}
+@media (min-width:576px) {
+	.cart {
+		width: 60px;
+		height: 60px;
+		right: 20px;
+	}
+}
+.cart a {
+	width: 100%;
+	height: 100%;
+}
+.cart a img {
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+}
