--- a/src/scss/pages/products.scss
+++ b/src/scss/pages/products.scss
@@ -164,7 +164,8 @@ a.btn_2 {
 // product
 .product {
 	width: 100%;
-	
+	display: flex;
+	flex-direction: column;
 }
 .product__img {
 	width: 100%;
@@ -175,6 +176,7 @@ a.btn_2 {
 	object-position: center;
 }
 .product__text {
+	flex: 0 1 50%;
 	margin: 20px 0;
 }
 .product_title {
