--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -37,4 +37,6 @@ body._lock {
 @import "pages/catalog";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/product_page";
+@import "components/shoppingСart";
 @import "components/buttons.scss"
