--- a/src/scss/company.scss
+++ b/src/scss/company.scss
@@ -37,5 +37,7 @@ body._lock {
 @import "pages/company.scss";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/product_page";
+@import "components/shoppingСart";
 @import "components/buttons.scss";
 
