--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,4 +38,6 @@ body._lock {
 @import "layout/main";
 @import "layout/footer";
 @import "components/calculation";
+@import "components/product_page";
+@import "components/shoppingСart";
 @import "components/buttons.scss";
