fixed cat and add some fitches

--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -21,7 +21,7 @@ $fontFamily: "Formular";
 // Цвета
 $primalcolor: #000; // 3d3b3b
 $secondcolor: #414141;
-$light: #fdd501; //fee100
+$light: #38b08a; //fee100
 $black: #000;
 $white: #fff;
 $orange: #fe6829;
