--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -17,7 +17,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #fee100;
+	background-color: $light;
 }
 @media (min-width:1200px) {
 	.header::before {
