--- a/src/scss/layout/repeat.scss
+++ b/src/scss/layout/repeat.scss
@@ -108,10 +108,10 @@
 	content: "";
 	position: absolute;
 	width: 2px;
-	height: 100%;
+	height: 92%;
 	background-color: $green;
 	z-index: 1;
-	top: 0;
+	top: 35px;
 }
 @media (min-width:992px) {
 	.step__number::after {
