--- a/src/scss/components/shoppingСart.scss
+++ b/src/scss/components/shoppingСart.scss
@@ -217,7 +217,7 @@ button.amountPlus img, button.amountMinus img, .cart__remove img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	pointer-events: none;
+	// pointer-events: none;
 }
 
 .cart__remove {
@@ -234,6 +234,9 @@ button.amountPlus img, button.amountMinus img, .cart__remove img {
 }
 #buyForm .form-buy__item {
 	margin-bottom: 20px;
+}
+#buyForm .form-buy__item._error > input {
+	box-shadow: 0 0 15px red;
 }
 #buyForm .form-buy__item label{
 	display: block;
